--- a/board.html
+++ b/board.html
@@ -2,134 +2,59 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>안산퀵서비스 게시판</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>게시판 목록</title>
   <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      padding: 20px;
-      background: #f4f4f4;
-    }
-    h1 {
-      text-align: center;
-      color: #333;
-    }
-    .board-form, .board-table {
-      max-width: 800px;
-      margin: 20px auto;
-      background: white;
-      padding: 20px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      border-radius: 8px;
-    }
-    input, textarea, button {
-      width: 100%;
-      padding: 10px;
+    body { font-family: Arial; padding: 20px; background: #f9f9f9; }
+    h1 { text-align: center; }
+    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
+    th, td { padding: 12px; border: 1px solid #ccc; }
+    th { background: #007bff; color: white; }
+    a.button {
+      display: inline-block;
       margin-top: 10px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-    button {
-      background-color: #007bff;
+      padding: 10px 20px;
+      background: #28a745;
       color: white;
-      cursor: pointer;
+      text-decoration: none;
+      border-radius: 4px;
     }
-    button:hover {
-      background-color: #0056b3;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-    }
-    th, td {
-      padding: 12px;
-      border-bottom: 1px solid #ddd;
-    }
-    th {
-      background-color: #007bff;
-      color: white;
-    }
-    .empty {
-      text-align: center;
-      color: #999;
-      padding: 20px 0;
-    }
+    a.button:hover { background: #218838; }
   </style>
 </head>
 <body>
+  <h1>📋 게시글 목록</h1>
+  <a href="write.html" class="button">✏️ 글쓰기</a>
 
-  <h1>📌 안산퀵서비스 공지 게시판</h1>
-
-  <div class="board-form">
-    <h2>글 작성</h2>
-    <input type="text" id="title" placeholder="제목을 입력하세요" />
-    <textarea id="content" rows="5" placeholder="내용을 입력하세요"></textarea>
-    <button onclick="addPost()">등록</button>
-  </div>
-
-  <div class="board-table">
-    <h2>📋 게시글 목록</h2>
-    <table id="postTable">
-      <thead>
-        <tr>
-          <th>제목</th>
-          <th>날짜</th>
-        </tr>
-      </thead>
-      <tbody id="postList">
-        <tr class="empty"><td colspan="2">등록된 게시글이 없습니다.</td></tr>
-      </tbody>
-    </table>
-  </div>
+  <table>
+    <thead>
+      <tr>
+        <th>제목</th>
+        <th>작성일</th>
+      </tr>
+    </thead>
+    <tbody id="postList"></tbody>
+  </table>
 
   <script>
-    let posts = JSON.parse(localStorage.getItem("boardPosts")) || [];
+    const posts = JSON.parse(localStorage.getItem("boardPosts")) || [];
+    const postList = document.getElementById("postList");
 
-    function renderPosts() {
-      const postList = document.getElementById("postList");
-      postList.innerHTML = "";
-
-      if (posts.length === 0) {
-        postList.innerHTML = `<tr class="empty"><td colspan="2">등록된 게시글이 없습니다.</td></tr>`;
-        return;
-      }
-
+    if (posts.length === 0) {
+      postList.innerHTML = `<tr><td colspan="2">게시글이 없습니다.</td></tr>`;
+    } else {
       posts.forEach(post => {
-        const row = document.createElement("tr");
-        row.innerHTML = `
-          <td><strong>${post.title}</strong><br><small>${post.content}</small></td>
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td>${post.title}</td>
           <td>${post.date}</td>
         `;
-        postList.appendChild(row);
+        postList.appendChild(tr);
       });
     }
-
-    function addPost() {
-      const title = document.getElementById("title").value.trim();
-      const content = document.getElementById("content").value.trim();
-
-      if (!title || !content) {
-        alert("제목과 내용을 모두 입력하세요.");
-        return;
-      }
-
-      const newPost = {
-        title,
-        content,
-        date: new Date().toLocaleDateString()
-      };
-
-      posts.unshift(newPost);  // 최신글 상단 추가
-      localStorage.setItem("boardPosts", JSON.stringify(posts));
-      document.getElementById("title").value = "";
-      document.getElementById("content").value = "";
-      renderPosts();
-    }
-
-    renderPosts(); // 초기 렌더링
   </script>
+</body>
+</html>
+
 
 </body>
 </html>
