--- a/board.html
+++ b/board.html
@@ -7,11 +7,11 @@
     body { font-family: Arial; padding: 20px; background: #f9f9f9; }
     h1 { text-align: center; }
     table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-    th, td { padding: 12px; border: 1px solid #ccc; }
+    th, td { padding: 12px; border: 1px solid #ccc; text-align: left; }
     th { background: #007bff; color: white; }
     a.button {
       display: inline-block;
-      margin-top: 10px;
+      margin-bottom: 10px;
       padding: 10px 20px;
       background: #28a745;
       color: white;
@@ -19,6 +19,8 @@
       border-radius: 4px;
     }
     a.button:hover { background: #218838; }
+    a.title-link { color: #007bff; text-decoration: none; }
+    a.title-link:hover { text-decoration: underline; }
   </style>
 </head>
 <body>
@@ -42,10 +44,10 @@
     if (posts.length === 0) {
       postList.innerHTML = `<tr><td colspan="2">게시글이 없습니다.</td></tr>`;
     } else {
-      posts.forEach(post => {
+      posts.forEach((post, index) => {
         const tr = document.createElement("tr");
         tr.innerHTML = `
-          <td>${post.title}</td>
+          <td><a href="view.html?index=${index}" class="title-link">${post.title}</a></td>
           <td>${post.date}</td>
         `;
         postList.appendChild(tr);
@@ -55,6 +57,3 @@
 </body>
 </html>
 
-
-</body>
-</html>
