--- a/write.html
+++ b/write.html
@@ -2,63 +2,48 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>글 작성</title>
-  <style>
-    body { font-family: Arial; padding: 20px; background: #f9f9f9; }
-    h1 { text-align: center; }
-    form {
-      max-width: 600px;
-      margin: auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    input, textarea {
-      width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    button {
-      padding: 10px 20px;
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    button:hover { background: #0056b3; }
-  </style>
+  <title>글쓰기</title>
 </head>
 <body>
-  <h1>✏️ 게시글 작성</h1>
-  <form onsubmit="savePost(event)">
-    <input type="text" id="title" placeholder="제목" required />
-    <textarea id="content" rows="6" placeholder="내용" required></textarea>
-    <button type="submit">등록하기</button>
-  </form>
+  <h1 id="pageTitle">글쓰기</h1>
+  <input type="text" id="title" placeholder="제목"><br>
+  <textarea id="content" placeholder="내용" rows="5" cols="30"></textarea><br>
+  <button id="saveBtn">저장</button>
+  <a href="board.html">← 목록</a>
 
   <script>
-    function savePost(e) {
-      e.preventDefault();
-      const title = document.getElementById("title").value.trim();
-      const content = document.getElementById("content").value.trim();
-      if (!title || !content) return alert("제목과 내용을 입력하세요.");
+    const titleInput = document.getElementById("title");
+    const contentInput = document.getElementById("content");
+    const saveBtn = document.getElementById("saveBtn");
+    const urlParams = new URLSearchParams(location.search);
+    const index = urlParams.get("index");
+    const posts = JSON.parse(localStorage.getItem("boardPosts")) || [];
 
-      const newPost = {
-        title,
-        content,
-        date: new Date().toLocaleDateString()
-      };
-
-      const posts = JSON.parse(localStorage.getItem("boardPosts")) || [];
-      posts.unshift(newPost);
-      localStorage.setItem("boardPosts", JSON.stringify(posts));
-      location.href = "board.html"; // 목록으로 이동
+    if (index !== null && posts[index]) {
+      document.getElementById("pageTitle").textContent = "글 수정";
+      titleInput.value = posts[index].title;
+      contentInput.value = posts[index].content;
     }
+
+    saveBtn.addEventListener("click", () => {
+      const title = titleInput.value.trim();
+      const content = contentInput.value.trim();
+
+      if (!title || !content) {
+        alert("제목과 내용을 모두 입력하세요.");
+        return;
+      }
+
+      if (index !== null && posts[index]) {
+        posts[index] = { title, content };
+      } else {
+        posts.push({ title, content });
+      }
+
+      localStorage.setItem("boardPosts", JSON.stringify(posts));
+      location.href = "board.html";
+    });
   </script>
 </body>
 </html>
+
