--- a/board.html
+++ b/board.html
@@ -3,57 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <title>게시판 목록</title>
-  <style>
-    body { font-family: Arial; padding: 20px; background: #f9f9f9; }
-    h1 { text-align: center; }
-    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-    th, td { padding: 12px; border: 1px solid #ccc; text-align: left; }
-    th { background: #007bff; color: white; }
-    a.button {
-      display: inline-block;
-      margin-bottom: 10px;
-      padding: 10px 20px;
-      background: #28a745;
-      color: white;
-      text-decoration: none;
-      border-radius: 4px;
-    }
-    a.button:hover { background: #218838; }
-    a.title-link { color: #007bff; text-decoration: none; }
-    a.title-link:hover { text-decoration: underline; }
-  </style>
 </head>
 <body>
-  <h1>📋 게시글 목록</h1>
-  <a href="write.html" class="button">✏️ 글쓰기</a>
-
-  <table>
-    <thead>
-      <tr>
-        <th>제목</th>
-        <th>작성일</th>
-      </tr>
-    </thead>
-    <tbody id="postList"></tbody>
-  </table>
+  <h1>게시판</h1>
+  <a href="write.html">글쓰기</a>
+  <ul id="postList"></ul>
 
   <script>
-    const posts = JSON.parse(localStorage.getItem("boardPosts")) || [];
     const postList = document.getElementById("postList");
+    const posts = JSON.parse(localStorage.getItem("boardPosts")) || [];
 
-    if (posts.length === 0) {
-      postList.innerHTML = `<tr><td colspan="2">게시글이 없습니다.</td></tr>`;
-    } else {
-      posts.forEach((post, index) => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td><a href="view.html?index=${index}" class="title-link">${post.title}</a></td>
-          <td>${post.date}</td>
-        `;
-        postList.appendChild(tr);
-      });
-    }
+    posts.forEach((post, index) => {
+      const li = document.createElement("li");
+      li.innerHTML = `
+        <a href="view.html?index=${index}">${post.title}</a>
+      `;
+      postList.appendChild(li);
+    });
   </script>
 </body>
 </html>
+
 
