--- a/board.html
+++ b/board.html
@@ -1,30 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <script>
-  console.log("JS 로딩 확인");
-  const posts = JSON.parse(localStorage.getItem('posts') || '[]');
-  console.log("posts:", posts);
-  // 이하 기존 코드...
-</script>
-
-  <title>게시판 목록</title>
+<meta charset="UTF-8" />
+<title>게시판 목록</title>
+<style>
+  body { font-family: Arial, sans-serif; max-width: 700px; margin: auto; padding: 10px; }
+  a { text-decoration: none; color: blue; }
+  table { width: 100%; border-collapse: collapse; }
+  th, td { border-bottom: 1px solid #ccc; padding: 8px; text-align: left; }
+</style>
 </head>
 <body>
-  <h1>📋 게시글 목록</h1>
-  <ul id="postList"></ul>
-  <a href="write.html">✏️ 새 글 작성</a>
 
-  <script>
-    const posts = JSON.parse(localStorage.getItem('posts') || '[]');
-    const postList = document.getElementById('postList');
+<h1>게시판 목록</h1>
+<p><a href="write.html">글쓰기</a></p>
+<table>
+  <thead>
+    <tr><th>번호</th><th>제목</th><th>작성일</th></tr>
+  </thead>
+  <tbody id="post-list"></tbody>
+</table>
 
-    posts.forEach((post, index) => {
-      const li = document.createElement('li');
-      li.innerHTML = `<a href="view.html?id=${index}">${post.title}</a>`;
-      postList.appendChild(li);
-    });
-  </script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+<script>
+const firebaseConfig = {
+  apiKey: "AIzaSyD0xTVF_VRyLHr0N2rCul6S9ZpZgvndvD8",
+  authDomain: "ansan-8d9df.firebaseapp.com",
+  projectId: "ansan-8d9df",
+  storageBucket: "ansan-8d9df.firebasestorage.app",
+  messagingSenderId: "909462222806",
+  appId: "1:909462222806:web:5e1a5a8b282ea336a1d677",
+  measurementId: "G-M5YGHLVJ4S"
+};
+
+firebase.initializeApp(firebaseConfig);
+const db = firebase.firestore();
+
+async function loadPosts() {
+  const snapshot = await db.collection('posts').orderBy('createdAt', 'desc').get();
+  const tbody = document.getElementById('post-list');
+  tbody.innerHTML = '';
+  let idx = snapshot.size;
+  snapshot.forEach(doc => {
+    const data = doc.data();
+    const tr = document.createElement('tr');
+    tr.innerHTML = `
+      <td>${idx--}</td>
+      <td><a href="view.html?id=${doc.id}">${escapeHtml(data.title)}</a></td>
+      <td>${data.createdAt ? new Date(data.createdAt.seconds * 1000).toLocaleString() : ''}</td>
+    `;
+    tbody.appendChild(tr);
+  });
+}
+
+function escapeHtml(text) {
+  return text.replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
+}
+
+loadPosts();
+</script>
+
 </body>
 </html>
