--- a/write.html
+++ b/write.html
@@ -1,35 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>글 작성</title>
+<meta charset="UTF-8" />
+<title>글쓰기</title>
+<style>
+  body { font-family: Arial, sans-serif; max-width: 700px; margin: auto; padding: 10px; }
+  label, input, textarea, button { display: block; width: 100%; margin-bottom: 10px; }
+</style>
 </head>
 <body>
-  <h1>✍️ 글 작성</h1>
-  <form id="writeForm">
-    <input type="text" id="title" placeholder="제목" required><br><br>
-    <textarea id="content" placeholder="내용" rows="5" required></textarea><br><br>
-    <button type="submit">등록</button>
-  </form>
 
-  <script>
-    const form = document.getElementById('writeForm');
+<h1>글쓰기</h1>
+<p><a href="board.html">목록으로</a></p>
 
-    form.addEventListener('submit', function(e) {
-      e.preventDefault();
+<form id="post-form">
+  <label>제목</label>
+  <input type="text" id="title" required />
+  <label>내용</label>
+  <textarea id="content" rows="8" required></textarea>
+  <button type="submit">등록</button>
+</form>
 
-      const title = document.getElementById('title').value;
-      const content = document.getElementById('content').value;
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+<script>
+const firebaseConfig = {
+  apiKey: "AIzaSyD0xTVF_VRyLHr0N2rCul6S9ZpZgvndvD8",
+  authDomain: "ansan-8d9df.firebaseapp.com",
+  projectId: "ansan-8d9df",
+  storageBucket: "ansan-8d9df.firebasestorage.app",
+  messagingSenderId: "909462222806",
+  appId: "1:909462222806:web:5e1a5a8b282ea336a1d677",
+  measurementId: "G-M5YGHLVJ4S"
+};
 
-      const newPost = { title, content };
+firebase.initializeApp(firebaseConfig);
+const db = firebase.firestore();
 
-      const posts = JSON.parse(localStorage.getItem('posts') || '[]');
-      posts.push(newPost);
-      localStorage.setItem('posts', JSON.stringify(posts));
+document.getElementById('post-form').addEventListener('submit', async e => {
+  e.preventDefault();
+  const title = document.getElementById('title').value.trim();
+  const content = document.getElementById('content').value.trim();
+  if(!title || !content) return alert('제목과 내용을 입력하세요.');
 
-      alert('게시글이 등록되었습니다.');
-      window.location.href = 'board.html';
-    });
-  </script>
+  await db.collection('posts').add({
+    title,
+    content,
+    createdAt: firebase.firestore.FieldValue.serverTimestamp()
+  });
+
+  alert('등록되었습니다.');
+  location.href = 'board.html';
+});
+</script>
+
 </body>
 </html>
+
